Fix: Diagram Deserializer and Serializer
Signed-off-by: Matheus Lenke <matheuslenke@gmail.com>